--- a/src/numerical/potential/CMakeLists.txt
+++ b/src/numerical/potential/CMakeLists.txt
@@ -25,16 +25,16 @@ target_link_libraries(test_potential2d PRIVATE const PDEelliptic h5fortran::h5fo
 # adding INTERFACE to Mumps project didn't help either
 # nor did adding them in cmake/mumps.cmake
 # it seems to have to be right here.
-add_test(NAME unit:potential2
-  COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:test_potential2d> ${_potential_testfile}
-  WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
 if(mpi)
-  set(_nproc ${MPIEXEC_MAX_NUMPROCS})
+  add_test(NAME unit:potential2
+    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:test_potential2d> ${_potential_testfile}
+    WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
 else()
-  set(_nproc 1)
+  add_test(NAME unit:potential2
+    COMMAND $<TARGET_FILE:test_potential2d> ${_potential_testfile}
+    WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
 endif()
 set_tests_properties(unit:potential2 PROPERTIES TIMEOUT 30
-  PROCESSORS ${_nproc}
   FIXTURES_SETUP GemPot
   RESOURCE_LOCK cpu_mpi)
 
