use fetchcontent to get PyGemini, more PyGemini checks

--- a/src/numerical/potential/CMakeLists.txt
+++ b/src/numerical/potential/CMakeLists.txt
@@ -38,13 +38,13 @@ set_tests_properties(unit:potential2 PROPERTIES TIMEOUT 30
   FIXTURES_SETUP GemPot
   RESOURCE_LOCK cpu_mpi)
 
-if(python_ok)
+if(PYGEMINI_DIR)
   add_test(NAME unit:potential2:python
     COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/test_potential2d.py ${_potential_testfile})
   set_tests_properties(unit:potential2:python PROPERTIES
     REQUIRED_FILES ${_potential_testfile}
     TIMEOUT 10
     FIXTURES_REQUIRED GemPot)
-endif(python_ok)
+endif(PYGEMINI_DIR)
 
 endif(hdf5 AND ${PROJECT_NAME}_BUILD_TESTING)
