--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -27,7 +27,7 @@ jobs:
 
 # CI is too slow for 3d_glow
     - run: cmake -B build
-    - run: cmake --build build
+    - run: cmake --build build --parallel
 
     - run: ctest -E 3d --parallel 4 --output-on-failure
       working-directory: build
@@ -49,7 +49,7 @@ jobs:
         sudo apt install -yq --no-install-recommends gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-openmpi-dev libmumps-dev libhdf5-dev
 
     - run: cmake -B build -DCMAKE_BUILD_TYPE=Debug
-    - run: cmake --build build
+    - run: cmake --build build --parallel
 
     - run: ctest -R unit --parallel 4 --output-on-failure
       working-directory: build
@@ -69,7 +69,7 @@ jobs:
         python-version: '3.8'
 
     - run: cmake -B build
-    - run: cmake --build build
+    - run: cmake --build build --parallel
 
     - name: unit tests
       run: ctest -R unit --parallel 4 --output-on-failure
