--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -18,10 +18,14 @@ if(NOT mpi)
   target_link_libraries(mpimod PRIVATE MUMPS::mpiseq)
 endif()
 
+add_executable(mpi_cli get_mpi_count.f90)
+target_link_libraries(mpi_cli PRIVATE autogrid reader const pathlib)
+set_target_properties(mpi_cli PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+
 if(${PROJECT_NAME}_BUILD_TESTING)
 
 add_executable(test_excess_mpi test_excess_mpi.f90)
-target_link_libraries(test_excess_mpi mpimod)
+target_link_libraries(test_excess_mpi PRIVATE autogrid)
 add_test(NAME unit:mpi:excessCPU COMMAND $<TARGET_FILE:test_excess_mpi>)
 set_tests_properties(unit:mpi:excessCPU PROPERTIES TIMEOUT 10)
 
