ci:linux add cmake 3.13 job

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  hdf5:
+  cmake313-hdf5:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -19,6 +19,12 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+
+    - name: Get CMake 3.13
+      run: |
+        curl -L -O https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4-Linux-x86_64.tar.gz
+        tar -xf cmake-3.13.4-Linux-x86_64.tar.gz
+        echo "${GITHUB_WORKSPACE}/cmake-3.13.4-Linux-x86_64/bin" >> $GITHUB_PATH
 
     - name: Install packages
       run: |
@@ -34,7 +40,7 @@ jobs:
 
 
   debug:
-    needs: hdf5
+    needs: cmake313-hdf5
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
