--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,9 @@ endforeach()
 
 endfunction(set_targ_props)
 
+
+add_subdirectory(unit_tests)
+
 # --- MSISE00 or MSIS 2.0
 add_subdirectory(vendor/nrl_msis)
 
@@ -32,10 +35,6 @@ add_library(collision OBJECT collisions/collisions.f90)
 target_link_libraries(collision PRIVATE const config)
 
 # --- other libs
-if(mpi AND ${PROJECT_NAME}_BUILD_TESTING)
-  # keep this if(mpi) because these tests truly use MPI -- don't work with MPI stub
-  add_subdirectory(unit_tests)
-endif()
 
 add_subdirectory(neutral)
 add_subdirectory(sources)
@@ -64,5 +63,47 @@ set_target_properties(magcalc.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_
 
 add_test(NAME unit:magcalc_exe_ok COMMAND $<TARGET_FILE:magcalc.bin>)
 set_tests_properties(unit:magcalc_exe_ok PROPERTIES PASS_REGULAR_EXPRESSION "EOF: MAGCALC")
+
+# --- gemini3d.run Fortran front end
+add_executable(gemini3d.run gemini_runner.f90 mpimod/runner.f90 mpimod/get_cpu.f90)
+target_link_libraries(gemini3d.run PRIVATE const config pathlib timeutils autogrid reader h5fortran::h5fortran nc4fortran::nc4fortran)
+set_target_properties(gemini3d.run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+set_target_properties(gemini3d.run PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+
+# Ref: https://gitlab.kitware.com/cmake/cmake/-/blob/master/Modules/ProcessorCount.cmake
+# https://gitlab.kitware.com/search?group_id=415&project_id=541&repository_ref=master&scope=blobs&search=GetNumberOfPhysicalCPU&snippets=false
+# shortcomings: hyperthreading may give incorrect result
+if(mpi)
+  if(WIN32)
+    # Windows
+    target_sources(gemini3d.run PRIVATE mpimod/get_cpu_win.c)
+  else()
+    # MacOS and Linux
+    find_path(hwloc_inc NAMES hwloc.h)
+    find_library(hwloc NAMES hwloc)
+    if(hwloc_inc AND hwloc)
+      target_sources(gemini3d.run PRIVATE mpimod/get_cpu_hwloc.c)
+      target_include_directories(gemini3d.run PRIVATE ${hwloc_inc})
+      target_link_libraries(gemini3d.run PRIVATE ${hwloc})
+    else()
+      target_sources(gemini3d.run PRIVATE mpimod/get_cpu_sysconf.c)
+    endif()
+  endif()
+else(mpi)
+  target_sources(gemini3d.run PRIVATE mpimod/dummy_cpu.c)
+endif(mpi)
+
+# --- Gemini compare
+
+if(${PROJECT_NAME}_BUILD_TESTING)
+  add_executable(gemini3d.compare gemini_compare.f90 io/read_plasma_hdf5.f90)
+  target_link_libraries(gemini3d.compare PRIVATE assert config reader pathlib timeutils const nc4fortran::nc4fortran h5fortran::h5fortran)
+  target_include_directories(gemini3d.compare PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include)
+  set_target_properties(gemini3d.compare PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
+    Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+endif()
+
+# --- apply properties
 
 set_targ_props(autogrid calculus collision config const fang fang_run io ionization gbsv logging mpimod multifluid neutral pathlib precipBCs reader sanity_check sources temporal timeutils)
