--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -1,3 +1,16 @@
+if(NOT ${PROJECT_NAME}_BUILD_TESTING)
+  return()
+endif()
+
+add_library(assert assert.f90)
+target_include_directories(assert INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
+set_target_properties(assert PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+
+if(NOT mpi)
+# keep this if(mpi) because these tests truly use MPI -- don't work with MPI stub
+  return()
+endif()
+
 add_executable(test_mpi test_mpi.f90)
 target_link_libraries(test_mpi MPI::MPI_Fortran)
 add_test(NAME unit:mpi_basic
