gemini3d.run: find hwloc more reliably

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,3 +1,6 @@
+include(CheckSymbolExists)
+include(CheckIncludeFile)
+
 #--------magnetic field calculation executable---------------
 configure_file(magcalc_cli.in.f90 magcalc_cli.f90 @ONLY)
 add_executable(magcalc.bin magcalc.f90 ${CMAKE_CURRENT_BINARY_DIR}/magcalc_cli.f90)
@@ -14,26 +17,41 @@ target_link_libraries(gemini3d.run PRIVATE const config pathlib timeutils autogr
 set_target_properties(gemini3d.run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set_target_properties(gemini3d.run PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 
+function(cpu_count)
 # Ref: https://gitlab.kitware.com/cmake/cmake/-/blob/master/Modules/ProcessorCount.cmake
 # https://gitlab.kitware.com/search?group_id=415&project_id=541&repository_ref=master&scope=blobs&search=GetNumberOfPhysicalCPU&snippets=false
-# shortcomings: hyperthreading may give incorrect result
+# without hwloc, hyperthreading may give incorrect result
 if(mpi)
-  if(WIN32)
-    # Windows
+  find_package(HWLOC)
+
+  if(HWLOC_FOUND)
+    # MSYS2 also has this
+    target_sources(gemini3d.run PRIVATE get_cpu_hwloc.c)
+    target_link_libraries(gemini3d.run PRIVATE HWLOC::HWLOC)
+    return()
+  endif()
+
+  check_include_file(unistd.h HAVE_UNISTD_H)
+  if(HAVE_UNISTD_H)
+    check_symbol_exists(_SC_NPROCESSORS_ONLN unistd.h HAVE_GNU_COUNT)
+  endif()
+
+  if(HAVE_GNU_COUNT)
+    # https://developer.apple.com/library/archive/documentation/System/Conceptual/ManPages_iPhoneOS/man3/sysconf.3.html
+    target_sources(gemini3d.run PRIVATE get_cpu_sysconf.c)
+  elseif(WIN32)
     target_sources(gemini3d.run PRIVATE get_cpu_win.c)
   else()
-    # MacOS and Linux
-    find_package(HWLOC)
-    if(HWLOC_FOUND)
-      target_sources(gemini3d.run PRIVATE get_cpu_hwloc.c)
-      target_link_libraries(gemini3d.run PRIVATE HWLOC::HWLOC)
-    else()
-      target_sources(gemini3d.run PRIVATE get_cpu_sysconf.c)
-    endif()
+    target_sources(gemini3d.run PRIVATE dummy_cpu.c)
   endif()
+
 else(mpi)
   target_sources(gemini3d.run PRIVATE dummy_cpu.c)
 endif(mpi)
+
+endfunction(cpu_count)
+
+cpu_count()
 
 # --- Gemini compare
 
