--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,21 +1,31 @@
 include(CheckSymbolExists)
 include(CheckIncludeFile)
 
+add_library(helpmod OBJECT help.f90)
+target_link_libraries(helpmod PRIVATE config)
+set_target_properties(helpmod PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+target_include_directories(helpmod INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
+
 #--------magnetic field calculation executable---------------
 configure_file(magcalc_cli.in.f90 magcalc_cli.f90 @ONLY)
-add_executable(magcalc.bin magcalc.f90 ${CMAKE_CURRENT_BINARY_DIR}/magcalc_cli.f90)
-target_link_libraries(magcalc.bin PRIVATE config const grid io mesh mpimod pathlib reader sanity_check timeutils h5fortran::h5fortran)
+add_executable(magcalc.bin)
+target_sources(magcalc.bin PRIVATE magcalc.f90 ${CMAKE_CURRENT_BINARY_DIR}/magcalc_cli.f90)
+target_link_libraries(magcalc.bin PRIVATE helpmod helpmod config const grid io mesh mpimod pathlib reader sanity_check timeutils h5fortran::h5fortran)
 set_target_properties(magcalc.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 add_test(NAME unit:magcalc_exe_ok COMMAND $<TARGET_FILE:magcalc.bin>)
-set_tests_properties(unit:magcalc_exe_ok PROPERTIES PASS_REGULAR_EXPRESSION "EOF: MAGCALC")
+set_tests_properties(unit:magcalc_exe_ok PROPERTIES PASS_REGULAR_EXPRESSION "EOF: magcalc.bin")
 
 # --- gemini3d.run Fortran front end
+configure_file(gemini3d_run.in.f90 gemini3d_run.f90 @ONLY)
 add_executable(gemini3d.run)
-target_sources(gemini3d.run PRIVATE gemini_runner.f90 runner.f90 get_cpu.f90)
-target_link_libraries(gemini3d.run PRIVATE const config pathlib timeutils autogrid reader h5fortran::h5fortran nc4fortran::nc4fortran)
+target_sources(gemini3d.run PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/gemini3d_run.f90 runner.f90 get_cpu.f90)
+target_link_libraries(gemini3d.run PRIVATE const helpmod config pathlib timeutils autogrid reader h5fortran::h5fortran nc4fortran::nc4fortran)
 set_target_properties(gemini3d.run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set_target_properties(gemini3d.run PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+
+add_test(NAME unit:gemini3d_run_ok COMMAND $<TARGET_FILE:gemini3d.run>)
+set_tests_properties(unit:gemini3d_run_ok PROPERTIES PASS_REGULAR_EXPRESSION "EOF: gemini3d.run")
 
 function(cpu_count)
 # Ref: https://gitlab.kitware.com/cmake/cmake/-/blob/master/Modules/ProcessorCount.cmake
@@ -54,6 +64,11 @@ endfunction(cpu_count)
 cpu_count()
 
 # --- Gemini compare
+
+add_library(assert assert.f90)
+target_include_directories(assert INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
+set_target_properties(assert PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+
 
 add_executable(gemini3d.compare)
 target_sources(gemini3d.compare PRIVATE gemini_compare.f90 ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare.f90)
