--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -23,7 +23,7 @@ jobs:
 
 # CI is too slow for 3d_glow
 
-    - run: cmake -Ddownload="2dns_fang;2dew_fang;2dns_glow;2dew_glow" -P cmake/download.cmake
+    - run: cmake -Dnames="2dns_fang;2dew_fang;2dns_glow;2dew_glow" -P cmake/download.cmake
       timeout-minutes: 2
 
     - run: cmake -B build
