--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -35,7 +35,7 @@ jobs:
         sudo cmake -P cmake/gemini_prereq.cmake
 
 # CI is too slow for 3d_glow
-    - run: cmake -Ddownload="2dns_fang;2dew_fang;2dns_glow;2dew_glow" -P cmake/download.cmake
+    - run: cmake -Dnames="2dns_fang;2dew_fang;2dns_glow;2dew_glow" -P cmake/download.cmake
       timeout-minutes: 2
 
     - run: cmake -B build
@@ -57,7 +57,7 @@ jobs:
         sudo apt update -yq
         sudo cmake -P cmake/gemini_prereq.cmake
 
-    - run: cmake -Ddownload="2dew_fang" -P cmake/download.cmake
+    - run: cmake -Dnames="2dew_fang" -P cmake/download.cmake
       timeout-minutes: 2
 
     - run: cmake -B build -DCMAKE_BUILD_TYPE=Debug
