--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -45,6 +45,7 @@ if(mpi)
     target_link_libraries(test_hwloc PRIVATE HWLOC::HWLOC)
     # NOTE: MPIEXEC_MAX_NUMPROCS is fallible, it uses less robust methods than hwloc! Particularly on ARM (Raspberry Pi)
     add_test(NAME unit:HWLOC COMMAND $<TARGET_FILE:test_hwloc> ${Ncpu})
+    set_tests_properties(unit:HWLOC PROPERTIES FIXTURES_SETUP hwloc_fix TIMEOUT 10)
 
     return()
   endif()
@@ -60,6 +61,7 @@ if(mpi)
   elseif(WIN32)
     target_sources(gemini3d.run PRIVATE get_cpu_win.c)
   else()
+    message(STATUS "did not find libhwloc or sysconf. gemini3d.run -n Ncpu option will be needed for those using it.")
     target_sources(gemini3d.run PRIVATE dummy_cpu.c)
   endif()
 
