hwloc: optimized build and clearer options
findHwloc: top-level for summary scope

cmake3.13: gemini3d.run link hwloc directly

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -10,17 +10,22 @@ target_include_directories(helpmod INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include
 configure_file(magcalc_cli.in.f90 magcalc_cli.f90 @ONLY)
 add_executable(magcalc.bin)
 target_sources(magcalc.bin PRIVATE magcalc.f90 ${CMAKE_CURRENT_BINARY_DIR}/magcalc_cli.f90)
-target_link_libraries(magcalc.bin PRIVATE helpmod helpmod config const grid io mesh mpimod pathlib reader sanity_check timeutils h5fortran::h5fortran)
+target_link_libraries(magcalc.bin PRIVATE helpmod config const grid io mesh mpimod pathlib reader sanity_check timeutils h5fortran::h5fortran)
 set_target_properties(magcalc.bin PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 add_test(NAME unit:magcalc_exe_ok COMMAND $<TARGET_FILE:magcalc.bin>)
 set_tests_properties(unit:magcalc_exe_ok PROPERTIES PASS_REGULAR_EXPRESSION "EOF: magcalc.bin")
 
 # --- gemini3d.run Fortran front end
+add_subdirectory(hwloc)
+
 configure_file(gemini3d_run.in.f90 gemini3d_run.f90 @ONLY)
 add_executable(gemini3d.run)
-target_sources(gemini3d.run PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/gemini3d_run.f90 runner.f90 get_cpu.f90)
-target_link_libraries(gemini3d.run PRIVATE const helpmod config pathlib timeutils autogrid reader h5fortran::h5fortran nc4fortran::nc4fortran)
+target_sources(gemini3d.run PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/gemini3d_run.f90 runner.f90)
+target_link_libraries(gemini3d.run PRIVATE const helpmod hwloc_ifc hwloc_c config pathlib timeutils autogrid reader h5fortran::h5fortran nc4fortran::nc4fortran)
+if(HWLOC_FOUND)
+  target_link_libraries(gemini3d.run PRIVATE HWLOC::HWLOC)
+endif()
 set_target_properties(gemini3d.run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set_target_properties(gemini3d.run PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 
@@ -28,50 +33,6 @@ add_test(NAME unit:gemini3d_run_ok COMMAND $<TARGET_FILE:gemini3d.run>)
 set_tests_properties(unit:gemini3d_run_ok PROPERTIES
   PASS_REGULAR_EXPRESSION "EOF: gemini3d.run"
   DEPENDS unit:HWLOC)
-
-function(cpu_count)
-# Ref: https://gitlab.kitware.com/cmake/cmake/-/blob/master/Modules/ProcessorCount.cmake
-# https://gitlab.kitware.com/search?group_id=415&project_id=541&repository_ref=master&scope=blobs&search=GetNumberOfPhysicalCPU&snippets=false
-# without hwloc, hyperthreading may give incorrect result
-if(mpi)
-  if(HWLOC_FOUND)
-    # MSYS2 also has this
-    target_sources(gemini3d.run PRIVATE get_cpu_hwloc.c)
-    target_include_directories(gemini3d.run PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-    target_link_libraries(gemini3d.run PRIVATE HWLOC::HWLOC)
-
-    add_executable(test_hwloc test_hwloc.c get_cpu_hwloc.c)
-    target_include_directories(test_hwloc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-    target_link_libraries(test_hwloc PRIVATE HWLOC::HWLOC)
-    # NOTE: MPIEXEC_MAX_NUMPROCS is fallible, it uses less robust methods than hwloc! Particularly on ARM (Raspberry Pi)
-    add_test(NAME unit:HWLOC COMMAND $<TARGET_FILE:test_hwloc> ${Ncpu})
-    set_tests_properties(unit:HWLOC PROPERTIES FIXTURES_SETUP hwloc_fix TIMEOUT 10)
-
-    return()
-  endif()
-
-  check_include_file(unistd.h HAVE_UNISTD_H)
-  if(HAVE_UNISTD_H)
-    check_symbol_exists(_SC_NPROCESSORS_ONLN unistd.h HAVE_GNU_COUNT)
-  endif()
-
-  if(HAVE_GNU_COUNT)
-    # https://developer.apple.com/library/archive/documentation/System/Conceptual/ManPages_iPhoneOS/man3/sysconf.3.html
-    target_sources(gemini3d.run PRIVATE get_cpu_sysconf.c)
-  elseif(WIN32)
-    target_sources(gemini3d.run PRIVATE get_cpu_win.c)
-  else()
-    message(STATUS "did not find libhwloc or sysconf. gemini3d.run -n Ncpu option will be needed for those using it.")
-    target_sources(gemini3d.run PRIVATE dummy_cpu.c)
-  endif()
-
-else(mpi)
-  target_sources(gemini3d.run PRIVATE dummy_cpu.c)
-endif(mpi)
-
-endfunction(cpu_count)
-
-cpu_count()
 
 # --- Gemini compare
 
